fixed the spacing issue by adding max-height to the css and fixed one line of JS

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,7 @@ p {
 .current-weather {
   display: flex;
   justify-content: space-between;
+  max-height: 120px;
 }
 .current-temperature {
   font-size: 48px;
